# Nagi

./: .gitignore  G.py  README.md  bubble_text.py  build_native.bat  config.py  main.py  mainwindow.py  mainwindow.ui  nagi_mcp_server.py  network.py  opengl_widget.py  qmodelwidget.py  tray.py  untited.py  untitled.ui
nagi_skill/: SKILL.md
native/: CMakeLists.txt  build.py  test.cpp
native/framework/: CMakeLists.txt
native/framework/src/Rendering/OpenGL/: CubismOffscreenSurface_OpenGLES2.cpp  CubismRenderer_OpenGLES2.cpp
native/framework/src/Type/: csmVector.hpp
native/include/: LAppDelegate.hpp  LAppLive2DManager.hpp  LAppView.hpp  LAppWindow.hpp  Platform.hpp
native/src/: LAppDefine.cpp  LAppDelegate.cpp  LAppLive2DManager.cpp  LAppModel.cpp  LAppPal.cpp  LAppView.cpp  Platform.cpp  TouchManager.cpp  bind.cpp
native/tape/: __init__.py  definition.py  generator.py  handler.py  parser.py
native/tape/include/: TapeDefine.h
native/tape/template/pybind11/: Base.Template  Bind.Template  BindCpp.Template
